tests/reject/variableRedeclare.emojic
🏁 🍇
  23 ➡️ z
  🔤12345678🔤 ➡️ z
🍉
